feat: Github Package Registry Publish 세팅
* GPR을 이용해 패키지 배포 (추후 Maven Central로 변경 또는 동시에 배포 예정)
* Github Actions를 통해 Release가 수행되면 GPR 배포

--- a/pom.xml
+++ b/pom.xml
@@ -15,4 +15,12 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/Sejong-OSS/Kakao_I_OpenBuilder_Library</url>
+        </repository>
+    </distributionManagement>
+
 </project>
