--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,5 +16,15 @@ jobs:
           java-version: '8'
           distribution: 'adopt'
           cache: maven
+      - name: Upload Artifact
+        run: |
+          mkdir -p ./artifact
+          echo ${{ github.event.number }} > artifact/pr_number
+          echo ${{ github.event.pull_request.head.ref }} > artifact/head_ref
+          echo ${{ github.event.pull_request.base.ref }} > artifact/base_ref
+      - uses: actions/upload-artifact@v2
+        with:
+          name: artifact
+          path: artifact
       - name: Build with Maven
         run: mvn -B package --file pom.xml
