--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,4 +1,4 @@
-name: Sonar
+name: SonarCloud Analyze
 on:
   workflow_run:
     workflows: [Build]
@@ -11,25 +11,34 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
+          repository: ${{ github.event.workflow_run.head_repository.full_name }}
+          ref: ${{ github.event.workflow_run.head_branch }}
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v1
+      - name: Download artifact
+        uses: dawidd6/action-download-artifact@v2
         with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Cache Maven packages
-        uses: actions/cache@v1
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Build and analyze
+          workflow: build.yml
+          pr: ${{github.event.pull_request.number}}
+          commit: ${{github.event.pull_request.head.sha}}
+          name: artifact
+          path: artifact
+      - name: Set variables
+        run: |
+          echo "PR_NUMBER=$(cat artifact/pr_number)" >> $GITHUB_ENV
+          echo "HEAD_REF=$(cat artifact/head_ref)" >> $GITHUB_ENV
+          echo "BASE_REF=$(cat artifact/base_ref)" >> $GITHUB_ENV
+      - name: SonarCloud Scan
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Sejong-OSS_Kakao_I_OpenBuilder_Library
+        run: >
+          mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+          -Dsonar.projectKey=Sejong-OSS_Kakao_I_OpenBuilder_Library
+          -Dsonar.scm.revision=${{ github.event.workflow_run.head_sha }}
+          -Dsonar.pullrequest.key=${{ env.PR_NUMBER }}
+          -Dsonar.pullrequest.branch=${{ env.HEAD_REF }}
+          -Dsonar.pullrequest.base=${{ env.BASE_REF }}
