--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -42,4 +42,4 @@ jobs:
           -Dsonar.pullrequest.key=${{ env.PR_NUMBER }}
           -Dsonar.pullrequest.branch=${{ env.HEAD_REF }}
           -Dsonar.pullrequest.base=${{ env.BASE_REF }}
-          -Dsonar.sonar.coverage.exclusions=**/Main.class,**/util/*.class,**/response/common/*.class
+          -Dsonar.coverage.exclusions=**/Main.class,**/util/*.class,**/response/common/*.class
